project(indirect_addressing_pointers)

add_executable(main20 main20.cpp)
add_executable(main21 main21.cpp)
add_executable(main22 main22.cpp)
add_executable(main23 main23.cpp)
add_executable(main24 main24.cpp)
add_executable(main25 main25.cpp)

add_executable(main26 main26.cpp)
add_executable(main27 main27.cpp)
add_executable(main28 main28.cpp)
