project(understanding_basic_cpp_assumptions)

add_executable(main01 main01.cpp)
add_executable(main02 main02.cpp)

add_executable(main03 main03.cpp)

add_executable(main04 main04.cpp)
add_executable(main05 main05.cpp)
add_executable(main06 main06.cpp)
add_executable(main07 main07.cpp)

add_executable(main08 main08.cpp)
add_executable(main09 main09.cpp)

add_executable(main10 main10.cpp)
add_executable(main11 main11.cpp)
