project(exploring_classes_in_detail)

add_executable(main36 main36.cpp)
add_executable(main37 main37.cpp)
add_executable(main38 main38.cpp)
add_executable(main39 main39.cpp)

add_executable(main40 main40.cpp)
add_executable(main41 main41.cpp)
add_executable(main42 main42.cpp)
add_executable(main43 main43.cpp)
add_executable(main44 main44.cpp)